# mandel

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs  shader.wgsl
