[package]
name = "mandel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
winit = "0.27"
wgpu = "0.15.1"
env_logger = "0.10"
log = "0.4"
pollster = "0.2"
bytemuck = { version = "1.12", features = [ "derive" ] }
futures-intrusive = "0.4"


[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"

[[bin]]
name = "mandel"
path = "src/main.rs"

